# SeriesApplication

./: CMakeLists.txt  README.md
include/: DataCollector.h  DayOfWeek.h  EventsReminder.h  FileWriter.h  FollowingSeries.h  InputValidator.h  LiveStream.h  MessagePrinter.h  Movie.h  MovieFacade.h  MoviePrinter.h  MovieProposer.h  Pool.h  Series.h  StatisticMaker.h  UserInterface.h
src/: DataCollector.cpp  EventsReminder.cpp  FileWriter.cpp  FollowingSeries.cpp  InputValidator.cpp  LiveStream.cpp  MessagePrinter.cpp  Movie.cpp  MovieFacade.cpp  MoviePrinter.cpp  MovieProposer.cpp  Series.cpp  StatisticMaker.cpp  UserInterface.cpp  main.cpp
